# EVM

./: CMakeLists.txt
example/: CMakeLists.txt  client.cc  main.cc
include/: device.h  device_manager.h  net.h  service.h
protos/: environmental_monitor.proto
sql/: schema.sql
src/: CMakeLists.txt  device.cc  main.cpp  net.cc  service.cc
src/common/: sensor_data.h
src/database/: database.cpp  database.h
src/device/: device_manager.cpp  device_manager.h
src/models/: sensor_data.h
src/network/: http_server.cpp  http_server.h  tcp_server.cpp  tcp_server.h
src/scoring/: environment_scorer.cpp  environment_scorer.h
src/service/: main.cc  service.cc
src/services/: environment_service.cpp  environment_service.h  monitor_service.cpp  monitor_service.h
src/tasks/: data_maintenance.cpp  data_maintenance.h
src/utils/: json_helper.h
tools/: device_simulator.cpp
web/: index.html
